--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.fastpaygate.ru",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
